examples/test/testpolicy15228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15228
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key40: value17
      key24: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value38
          key18: value31
      podSelector:
        matchLabels:
          key17: value15
          key0: value26
          key45: value22
